schema/testdata/errors/reserved_model_name_identity.keel
//expect-error:7:15:NamingError:There already exists a reserved model with the name 'Identity'
model Identity {
    fields {
        email Text
    }
}
